--- a/FakerSpotter/Shared/MainLayout.razor
+++ b/FakerSpotter/Shared/MainLayout.razor
@@ -1,14 +1,10 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu/>
-    </div>
     <div class="main">
         <div class="px-4 top-row">
-            <a href="https://github.com/dentolos19/FakerSpotter" target="_blank" class="ml-md-auto">FakerSpotter</a>
+            <a href="https://github.com/dentolos19/FakerSpotter" target="_blank" class="ml-md-auto">GitHub</a>
         </div>
-
         <div class="content px-4">
             @Body
         </div>
