Fixed page redirect

--- a/FakerSpotter/Pages/Index.razor
+++ b/FakerSpotter/Pages/Index.razor
@@ -16,7 +16,8 @@
 
     private void Start()
     {
-        navigationManager.NavigateTo("/room/1");
+        
+        navigationManager.NavigateTo(navigationManager.BaseUri + "room/1");
     }
 
 }
