--- a/FakerSpotter/Pages/Rooms/Room1.razor
+++ b/FakerSpotter/Pages/Rooms/Room1.razor
@@ -15,7 +15,7 @@
 
     private void NextRoom()
     {
-        navigationManager.NavigateTo("/room/2");
+        navigationManager.NavigateTo(navigationManager.BaseUri + "room/2");
     }
 
 }
