--- a/FakerSpotter/Pages/Rooms/Room4.razor
+++ b/FakerSpotter/Pages/Rooms/Room4.razor
@@ -15,7 +15,7 @@
 
     private void NextRoom()
     {
-        navigationManager.NavigateTo("/room/5");
+        navigationManager.NavigateTo(navigationManager.BaseUri + "room/5");
     }
 
 }
