--- a/FakerSpotter/Pages/Rooms/Room5.razor
+++ b/FakerSpotter/Pages/Rooms/Room5.razor
@@ -15,7 +15,7 @@
 
     private void NextRoom()
     {
-        navigationManager.NavigateTo("/complete");
+        navigationManager.NavigateTo(navigationManager.BaseUri + "complete");
     }
 
 }
