--- a/FakerSpotter/Pages/Rooms/Room2.razor
+++ b/FakerSpotter/Pages/Rooms/Room2.razor
@@ -15,7 +15,7 @@
 
     private void NextRoom()
     {
-        navigationManager.NavigateTo("/room/3");
+        navigationManager.NavigateTo(navigationManager.BaseUri + "room/3");
     }
 
 }
