--- a/FakerSpotter/Pages/Rooms/Room3.razor
+++ b/FakerSpotter/Pages/Rooms/Room3.razor
@@ -15,7 +15,7 @@
 
     private void NextRoom()
     {
-        navigationManager.NavigateTo("/room/4");
+        navigationManager.NavigateTo(navigationManager.BaseUri + "room/4");
     }
 
 }
