--- a/FakerSpotter/Pages/Rooms/Room2.razor
+++ b/FakerSpotter/Pages/Rooms/Room2.razor
@@ -7,7 +7,7 @@
     <p>
         This is just a placeholder for the actual room.
     </p>
-    <button class="btn btn-primary" type="submit" @onclick="NextRoom">Next</button>
+    <button class="btn btn-primary" @onclick="NextRoom">Next</button>
 </div>
 
 @code
