--- a/FakerSpotter/Pages/Index.razor
+++ b/FakerSpotter/Pages/Index.razor
@@ -2,19 +2,19 @@
 
 @inject NavigationManager navigationManager
 
-<div style="position: absolute; text-align: center; top: 30vh; width: 100%;">
+<div style="position: absolute;text-align: center; top: 30vh; width: 100%;">
     <h3>FakeSpotter (Prototype)</h3>
     <p>
-        Please note this is only a prototype, some features are not
+        Please note that this is only a prototype, some features are not
         final and may experience major changes in the future.
     </p>
-    <button class="btn btn-primary" type="submit" @onclick="Start">Begin</button>
+    <button class="btn btn-primary" @onclick="Begin">Begin</button>
 </div>
 
 @code
 {
 
-    private void Start()
+    private void Begin()
     {
         
         navigationManager.NavigateTo(navigationManager.BaseUri + "room/1");
