--- a/FakerSpotter/Pages/Rooms/Room1.razor
+++ b/FakerSpotter/Pages/Rooms/Room1.razor
@@ -2,16 +2,48 @@
 
 @inject NavigationManager navigationManager
 
-<div style="position: absolute; text-align: center; top: 30vh; width: 100%;">
+<div>
     <h3>Room 1</h3>
-    <p>
-        This is just a placeholder for the actual room.
-    </p>
-    <button class="btn btn-primary" type="submit" @onclick="NextRoom">Next</button>
+    <div>
+        <img src="img/fake-news-0.jpg" width="200" height="200" />
+        <div class="form-group">
+            <p>Do you think this picture is authentic?</p>
+            <div class="form-check">
+                <input id="yesOption" name="yesNo" class="form-check-input" type="radio" checked @onclick="ToggleOption"/>
+                <label class="form-check-label" for="yesOption">Yes</label>
+            </div>
+            <div class="form-check">
+                <input id="noOption" name="yesNo" class="form-check-input" type="radio" @onclick="ToggleOption"/>
+                <label class="form-check-label" for="noOption">No</label>
+            </div>
+        </div>
+        @if (_yesNoOption)
+        {
+            <div class="form-group">
+                <label for="yesBox">If yes, did you attempt to check other reliable sources? And why?</label>
+                <input id="yesBox" class="form-control" type="text"/>
+            </div>
+        }
+        else
+        {
+            <div class="form-group">
+                <label for="noBox">If no, what makes to think so?</label>
+                <input id="noBox" class="form-control" type="text"/>
+            </div>
+        }
+    </div>
+    <button class="btn btn-primary" @onclick="NextRoom">Next</button>
 </div>
-
+    
 @code
 {
+
+    private bool _yesNoOption = true;
+
+    private void ToggleOption()
+    {
+        _yesNoOption = !_yesNoOption;
+    }
 
     private void NextRoom()
     {
