Added minor changes

--- a/FakerSpotter/Pages/Rooms/Room1.razor
+++ b/FakerSpotter/Pages/Rooms/Room1.razor
@@ -3,7 +3,7 @@
 @inject NavigationManager navigationManager
 
 <div>
-    <h3>Room 1</h3>
+    <h3>Room 1 - Q&amp;A</h3>
     <div>
         <img src="img/fake-news-0.jpg" width="200" height="200" />
         <div class="form-group">
