--- a/FakerSpotter/Pages/Rooms/Room2.razor
+++ b/FakerSpotter/Pages/Rooms/Room2.razor
@@ -3,7 +3,7 @@
 @inject NavigationManager navigationManager
 
 <div style="position: absolute; text-align: center; top: 30vh; width: 100%;">
-    <h3>Room 2</h3>
+    <h3>Room 2 - Q&amp;A</h3>
     <p>
         This is just a placeholder for the actual room.
     </p>
