--- a/FakerSpotter/Pages/Rooms/Room3.razor
+++ b/FakerSpotter/Pages/Rooms/Room3.razor
@@ -3,7 +3,7 @@
 @inject NavigationManager navigationManager
 
 <div style="position: absolute; text-align: center; top: 30vh; width: 100%;">
-    <h3>Room 3</h3>
+    <h3>Room 3 - Spot the fake news!</h3>
     <p>
         This is just a placeholder for the actual room.
     </p>
