Uses blazorise as a framework for bootstrap

--- a/FakerSpotter/Pages/Index.razor
+++ b/FakerSpotter/Pages/Index.razor
@@ -17,7 +17,7 @@
     private void Begin()
     {
         
-        navigationManager.NavigateTo(navigationManager.BaseUri + "room/1");
+        navigationManager.NavigateTo("room/1");
     }
 
 }
