--- a/FakerSpotter/Pages/Rooms/Room2.razor
+++ b/FakerSpotter/Pages/Rooms/Room2.razor
@@ -1,6 +1,6 @@
 ﻿@page "/room/2"
 
-@inject NavigationManager navigationManager
+@inject NavigationManager _navigationManager
 
 <div style="position: absolute; text-align: center; top: 30vh; width: 100%;">
     <h3>Room 2 - Q&amp;A</h3>
@@ -15,7 +15,7 @@
 
     private void NextRoom()
     {
-        navigationManager.NavigateTo(navigationManager.BaseUri + "room/3");
+        _navigationManager.NavigateTo("room/3");
     }
 
 }
