--- a/FakerSpotter/Shared/MainLayout.razor
+++ b/FakerSpotter/Shared/MainLayout.razor
@@ -1,41 +1,3 @@
-﻿@using Blazorise.Icons.FontAwesome
+﻿@inherits LayoutComponentBase
 
-@inherits LayoutComponentBase
-
-<Layout>
-    <LayoutHeader>
-        <Bar ThemeContrast="ThemeContrast.Dark">
-            <BarBrand>
-                <BarLink To="">
-                    <BarIcon IconName="_brandIcon"/>
-                    FakerSpotter
-                </BarLink>
-            </BarBrand>
-            <BarToggler/>
-            <BarMenu>
-                <BarStart>
-                    <BarItem>
-                        <BarLink To="https://dentolos19.github.io">
-                            <BarIcon IconName="FontAwesomeIcons.Home"/> Home
-                        </BarLink>
-                    </BarItem>
-                </BarStart>
-                <BarEnd>
-                    <BarItem>
-                        <BarLink To="https://github.com/dentolos19/FakerSpotter">GitHub</BarLink>
-                    </BarItem>
-                </BarEnd>
-            </BarMenu>
-        </Bar>
-    </LayoutHeader>
-    <LayoutContent>
-        @Body
-    </LayoutContent>
-</Layout>
-
-@code
-{
-
-    private readonly RenderFragment _brandIcon =@<img src="assets/img/favicons/favicon-32x32.png" />;
-
-}
+@Body
