--- a/FakerSpotter/Shared/MainLayout.razor
+++ b/FakerSpotter/Shared/MainLayout.razor
@@ -1,16 +1,16 @@
 ﻿@inherits LayoutComponentBase
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="bg-light navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="assets/favicon/favicon-32x32.png" />
+            <img src="assets/favicon/favicon-32x32.png"/>
             <span class="align-middle">FakerSpotter</span>
         </a>
         <a class="d-flex" href="https://github.com/dentolos19/FakerSpotter" target="_blank">GitHub</a>
     </div>
 </nav>
 
-<div id="body" class="container-fluid" style="height: 100%; position: absolute; padding: 0;">
+<div id="body" class="container-fluid" style="height: 100%; padding: 0; position: absolute;">
     <div class="row" style="height: 100%; position: relative">
         <div class="col">
             <!-- nothing -->
