Updated website design

--- a/FakerSpotter/Pages/Index.razor
+++ b/FakerSpotter/Pages/Index.razor
@@ -2,12 +2,14 @@
 
 @inject NavigationManager _navigationManager
 
-<h3>FakeSpotter (Prototype)</h3>
-<p>
-    Please note that this is only a prototype, some features are not
-    final and may experience major changes in the future.
-</p>
-<button class="btn btn-primary" @onclick="Begin">Begin</button>
+<div style="text-align: center;">
+    <h3>FakeSpotter (Prototype)</h3>
+    <p>
+        Please note that this is only a prototype, some features are not
+        final and may experience major changes in the future.
+    </p>
+    <button class="btn btn-primary" @onclick="Begin">Begin</button>
+</div>
 
 @code
 {
