--- a/FakerSpotter/Shared/MainLayout.razor
+++ b/FakerSpotter/Shared/MainLayout.razor
@@ -16,7 +16,9 @@
             <!-- nothing -->
         </div>
         <div class="col-8">
-            @Body
+            <div class="align-self-center">
+                @Body
+            </div>
         </div>
         <div class="col">
             <!-- nothing -->
