--- a/FakerSpotter/Pages/Complete.razor
+++ b/FakerSpotter/Pages/Complete.razor
@@ -1,8 +1,22 @@
 ﻿@page "/complete"
 
-<div style="position: absolute; text-align: center; top: 30vh; width: 100%;">
-    <h3>Congrats!</h3>
+@inject NavigationManager _navigationManager
+
+<div style="text-align: center;">
+    <h3>Congratulations!</h3>
     <p>
         You have successfully cleared this escape room! Thank you for playing!
     </p>
+    <button class="btn btn-primary" @onclick="Back">Back</button>
 </div>
+
+@code
+{
+
+    private void Back()
+    {
+
+        _navigationManager.NavigateTo("");
+    }
+
+}
