--- a/FakerSpotter/_Imports.razor
+++ b/FakerSpotter/_Imports.razor
@@ -6,5 +6,10 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+
+@using Blazored.LocalStorage
+@using Blazorise
+
 @using FakerSpotter
+@using FakerSpotter.Core
 @using FakerSpotter.Shared
