--- a/FakerSpotter/App.razor
+++ b/FakerSpotter/App.razor
@@ -4,7 +4,10 @@
     </Found>
     <NotFound>
         <LayoutView Layout="typeof(MainLayout)">
-            <p>Sorry, there's nothing at this address.</p>
+            <div style="text-align: center;">
+                <h3>404</h3>
+                <p>Sorry, there's nothing at this address.</p>
+            </div>
         </LayoutView>
     </NotFound>
 </Router>
