--- a/FakerSpotter/Pages/Rooms/Room3.razor
+++ b/FakerSpotter/Pages/Rooms/Room3.razor
@@ -1,4 +1,5 @@
-﻿@page "/room/3"
+﻿@inherits PageLayout
+@page "/room/3"
 
 <h3>Room 3 - Spot the fake news!</h3>
 
@@ -10,13 +11,8 @@
 
 @code
 {
-    [Inject] private NavigationManager NavigationManager { get; set; }
-    [Inject] private ISyncLocalStorageService LocalStorage { get; set; }
 
-    protected override void OnInitialized()
-    {
-        UserSettings.LocalStorage ??= LocalStorage;
-    }
+    [Inject] private NavigationManager NavigationManager { get; set; }
 
     private void NextRoom()
     {
