--- a/FakerSpotter/Pages/Rooms/Room4.razor
+++ b/FakerSpotter/Pages/Rooms/Room4.razor
@@ -1,4 +1,5 @@
-﻿@page "/room/4"
+﻿@inherits PageLayout
+@page "/room/4"
 
 <h3>Room 4 - Spot the fake news!</h3>
 
@@ -12,12 +13,6 @@
 {
 
     [Inject] private NavigationManager NavigationManager { get; set; }
-    [Inject] private ISyncLocalStorageService LocalStorage { get; set; }
-
-    protected override void OnInitialized()
-    {
-        UserSettings.LocalStorage ??= LocalStorage;
-    }
 
     private void NextRoom()
     {
