--- a/FakerSpotter/Pages/Index.razor
+++ b/FakerSpotter/Pages/Index.razor
@@ -20,23 +20,23 @@
     {
         if (UserSettings.IsRoomOneCompleted != true)
         {
-            NavigationManager.NavigateTo("room/1");
+            NavigationManager.NavigateTo("room1");
         }
         else if (UserSettings.IsRoomTwoCompleted != true)
         {
-            NavigationManager.NavigateTo("room/2");
+            NavigationManager.NavigateTo("room2");
         }
         else if (UserSettings.IsRoomThreeCompleted != true)
         {
-            NavigationManager.NavigateTo("room/3");
+            NavigationManager.NavigateTo("room3");
         }
         else if (UserSettings.IsRoomFourCompleted != true)
         {
-            NavigationManager.NavigateTo("room/4");
+            NavigationManager.NavigateTo("room4");
         }
         else if (UserSettings.IsRoomFiveCompleted != true)
         {
-            NavigationManager.NavigateTo("room/5");
+            NavigationManager.NavigateTo("room5");
         }
         else
         {
