--- a/FakerSpotter/Components/MainLayout.razor
+++ b/FakerSpotter/Components/MainLayout.razor
@@ -8,7 +8,7 @@
                     <img src="assets/images/icon.png" width="32"/>
                     <span class="align-middle">FakerSpotter</span>
                 </a>
-                <a class="d-flex" href="leaderboard">Leaderboard</a>
+                <a class="d-flex" href="leaderboards">Leaderboards</a>
             </div>
         </nav>
     </LayoutHeader>
