--- a/FakerSpotter/_Imports.razor
+++ b/FakerSpotter/_Imports.razor
@@ -1,5 +1,6 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using System.Text.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
@@ -13,3 +14,4 @@
 @using FakerSpotter
 @using FakerSpotter.Components
 @using FakerSpotter.Core
+@using FakerSpotter.Core.Data
