--- a/FakerSpotter/Pages/Rooms/Room1.razor
+++ b/FakerSpotter/Pages/Rooms/Room1.razor
@@ -13,48 +13,16 @@
 
 <h3>Room 1 - Q&amp;A</h3>
 
-<div>
-    <img src="assets/images/0.jpg" width="200" height="200"/>
-    <div class="form-group">
-        <p>Do you think this picture is authentic?</p>
-        <div class="form-check">
-            <input id="yesOption" name="yesNo" class="form-check-input" type="radio" checked @onclick="ToggleOption"/>
-            <label class="form-check-label" for="yesOption">Yes</label>
-        </div>
-        <div class="form-check">
-            <input id="noOption" name="yesNo" class="form-check-input" type="radio" @onclick="ToggleOption"/>
-            <label class="form-check-label" for="noOption">No</label>
-        </div>
-    </div>
-    @if (YesNoOption)
-    {
-        <div class="form-group">
-            <label for="yesBox">Did you attempt to check other reliable sources? And why?</label>
-            <input id="yesBox" class="form-control" type="text"/>
-        </div>
-    }
-    else
-    {
-        <div class="form-group">
-            <label for="noBox">What makes to think so?</label>
-            <input id="noBox" class="form-control" type="text"/>
-        </div>
-    }
-</div>
+<p>
+    This is just a placeholder for the actual room.
+</p>
 
 <button class="btn btn-primary" @onclick="NextRoom">Next</button>
-    
+
 @code
 {
 
     [Inject] private NavigationManager NavigationManager { get; set; }
-
-    private bool YesNoOption { get; set; } = true;
-
-    private void ToggleOption()
-    {
-        YesNoOption = !YesNoOption;
-    }
 
     private void NextRoom()
     {
